Fix footer style and text overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,5 @@
 @import "ember-bootstrap/bootstrap";
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
+main > .container {
+  padding: 60px 15px;
 }
